@@ -1,5 +1,7 @@
 package no.sikt.nva.model;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -19,7 +21,26 @@ public class WarningDetails {
 
     public WarningDetails(Warning warningCode, String detail) {
         this.warningCode = warningCode;
-        this.details = List.of(detail);
+        this.details = Collections.singletonList(detail);
+    }
+
+    @JsonProperty("warningCode")
+    public Warning getWarningCode() {
+        return warningCode;
+    }
+
+    @JsonProperty("details")
+    public List<String> getDetails() {
+        return details;
+    }
+
+    public void setDetails(List<String> details) {
+        this.details = details;
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(warningCode);
     }
 
     @Override
@@ -39,11 +60,6 @@ public class WarningDetails {
         return warningCode + " = " + details;
     }
 
-    @Override
-    public int hashCode() {
-        return Objects.hash(warningCode);
-    }
-
     public enum Warning {
         VERSION_WARNING,
         SUBJECT_WARNING,
@@ -59,6 +75,4 @@ public class WarningDetails {
         PAGE_NUMBER_FORMAT_NOT_RECOGNIZED,
         CRISTIN_ID_PRESENT
     }
-
-
 }
